--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>ComfyUI Admin</h1>
+        <h1>ComfyUI</h1>
         <div class="user">
             {{ user.email }}
         </div>
@@ -18,7 +18,8 @@
     <div class="container"></div>
         <nav>
             <ul>
-                <li><a href="/user">Workflows</a></li>
+                <li><a href="/user">Dashboard</a></li>
+                <li><a href="/user/workflows">Workflows</a></li>
                 <li><a href="/user/jobs">Jobs</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
