--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -19,6 +19,7 @@
         <nav>
             <ul>
                 <li><a href="/user">Dashboard</a></li>
+                <li><a href="/user/catalog">Catalog</a></li>
                 <li><a href="/user/workflows">Workflows</a></li>
                 <li><a href="/user/jobs">Jobs</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
