--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -23,6 +23,7 @@
                 <li><a href="/admin/nodes">Nodes</a></li>
                 <li><a href="/admin/workflows">Workflows</a></li>
                 <li><a href="/admin/jobs">Jobs</a></li>
+                <li><a href="/user">User Dashboard</a></li>
             </ul>
         </nav>
 
