--- a/app/templates/admin/workflows/edit.html
+++ b/app/templates/admin/workflows/edit.html
@@ -14,6 +14,15 @@
     <label>Spec JSON</label><br>
     <textarea name="spec_json" rows="16" cols="90">{{ workflow.spec_json | tojson(indent=2) }}</textarea><br><br>
 
+    <label>Name</label><br>
+    <input type="text" name="name" value="{{ workflow.name }}"><br><br>
+
+    <label>Slug</label><br>
+    <input type="text" name="slug" value="{{ workflow.slug }}"><br><br>
+
+    <label>Category</label><br>
+    <input type="text" name="category" value="{{ workflow.category }}"><br><br>
+
     <button type="submit">Save</button>
 </form>
 
