logout user and refresh access token

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -24,6 +24,7 @@
                 <li><a href="/admin/workflows">Workflows</a></li>
                 <li><a href="/admin/jobs">Jobs</a></li>
                 <li><a href="/user">User Dashboard</a></li>
+                <li><a href="/admin/logout">Logout</a></li>
             </ul>
         </nav>
 
