--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -22,10 +22,10 @@
                 <li><a href="/user/catalog">Catalog</a></li>
                 <li><a href="/user/workflows">Workflows</a></li>
                 <li><a href="/user/jobs">Jobs</a></li>
-                <li><a href="/auth/logout">Logout</a></li>
                 {% if user.role == "ADMIN" %}
-                    <li><a href="/admin">Dashboard Admin</a></li>
+                <li><a href="/admin">Dashboard Admin</a></li>
                 {% endif %}
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
         
