--- a/app/templates/admin/jobs/list.html
+++ b/app/templates/admin/jobs/list.html
@@ -23,6 +23,8 @@
 
   <button type="submit">Filter</button>
   <a href="/admin/jobs">Reset</a>
+  &nbsp;|&nbsp;
+  <a href="/admin/jobs/health">Health</a>
 </form>
 
 <p style="margin: 6px 0;">Total: <b>{{ total }}</b> · Showing {{ jobs|length }} · Offset {{ offset }}</p>
