fix ui for user

--- a/app/templates/user/catalog/index.html
+++ b/app/templates/user/catalog/index.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<h1>Workflow Catalog</h1>
+<!-- <h1>Workflow Catalog</h1> -->
+ <h1>Каталог Workflow</h1>
 
 {% for category, items in catalog.items() %}
 <section class="catalog-category">
