--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -15,17 +15,23 @@
         </div>
     </header>
 
-    <div class="container"></div>
+    <div class="container">
         <nav>
             <ul>
-                <li><a href="/user">Dashboard</a></li>
+                <!-- <li><a href="/user">Dashboard</a></li>
                 <li><a href="/user/catalog">Catalog</a></li>
                 <li><a href="/user/workflows">Workflows</a></li>
                 <li><a href="/user/jobs">Jobs</a></li>
                 {% if user.role == "ADMIN" %}
                 <li><a href="/admin">Dashboard Admin</a></li>
                 {% endif %}
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="/logout">Logout</a></li> -->
+                <li><a href="/user">Главная панель</a></li>
+                <li><a href="/user/catalog">Каталог</a></li>
+                {% if user.role == "ADMIN" %}
+                <li><a href="/admin">Панель администратора</a></li>
+                {% endif %}
+                <li><a href="/logout">Выход</a></li>
             </ul>
         </nav>
         
